# -luelyPro

./: .env  .env.example  .gitignore  CHANGES.md  FINAL_REPORT.md  GOOGLE_TTS_SETUP.md  IMPROVEMENTS.md  MODELS_AND_PROMPTS.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_TABLE.md  PERFORMANCE_ANALYSIS.md  PROMPT_FIX.md  QUICKSTART.md  QUICK_START.md  README.md  README_MODES.md  REFACTORING.md  STACK_ANALYSIS.md  SUMMARY.md  TEST_SIMPLE.md  THESIS_REPEAT_FIX.md  USER_GUIDE.md  WHAT_CHANGED.md  asr_transcriber.py  cerebras_llm.py  check_audio_devices.py  check_recordings.py  config.py  diagnose.py  exceptions.py  index.css  index.html  index.js  index.tsx  live_recognizer.py  live_recognizer_backup.py  llm_answer.py  llm_answer_old.py  main.py  pyproject.toml  (+25 more)
None/speechbrain/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
cluely/: __init__.py  utils.py
cluely/audio/: __init__.py
cluely/core/: __init__.py  audio_utils.py
cluely/models/: __init__.py
diarization-master/: README.md  asr_transcriber.py  live_recognizer.py  llm_answer.py  main.py  pyproject.toml
realtime-coach-mvp/: .env.example  package-lock.json  package.json  server.js
realtime-coach-mvp/public/: client.js  gating-worklet.js  (+1 more)
tests/: examples.txt  more_examples.txt  test_basic.py  test_dialogue_context.py  test_log_analysis.py  test_logging.py  test_parse_theses.py  test_questions.py  test_scenarios.py  test_simulation.py  test_thesis_prompter_unit.py  test_tts_audio_formats.py  test_tts_suppress.py  test_two_questions.py  test_with_real_audio.py
