[project]
name = "diarization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "faster-whisper>=1.2.0",
    "loguru>=0.7.3",
    "numpy>=2.3.3",
    "pyannote-audio>=3.4.0",
    "pyttsx3>=2.99",
    "rhvoice-wrapper>=0.8.0",
    "sentencepiece>=0.2.1",
    "sounddevice>=0.5.2",
    "timm>=1.0.19",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "transformers>=4.56.1",
    "webrtcvad>=2.0.10",
    "google-genai>=1.38.0",
    "python-dotenv>=1.1.1",
    "silero-vad>=5.0.0",
    "num2words>=0.5.14",
    "websockets>=12.0",
    "pytest>=8.3.3",
    "openai>=1.0.0",
    "speechbrain>=1.0.0",
    "omegaconf>=2.3.0",
    "scipy>=1.11.0",
]

[tool.setuptools]
py-modules = [
  "asr_transcriber",
  "config",
  "exceptions",
  "live_recognizer",
  "llm_answer",
  "main",
  "thesis_generator",
  "thesis_judge",
  "thesis_prompter",
  "tts_silero",
  "vad_silero",
  "ws_server",
]

[project.scripts]
cluelypro = "main:main"
